<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) Google

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="store_name" translatable="false">Auto T-Shirt Shop</string>
    <string name="app_name">Food Rescue App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account"><u>Create New Account</u></string>
    <string name="already_have_an_account_login">Already have an account? <u>Login</u></string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="discover_free_food">Discover free food</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="add_image">Add Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="pick_up_time">Pick Up Time</string>
    <string name="quantity">Quantity</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="menu_logout">Logout</string>
    <string name="no_food_found">No Food Found</string>
    <string name="my_list">My List</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
</resources>
